--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "router5": "^7.0.2",
+    "uuid": "^7.0.0",
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
@@ -51,6 +52,7 @@
     "@types/react": "^16.9.22",
     "@types/react-dom": "^16.9.5",
     "@types/terser-webpack-plugin": "^2.2.0",
+    "@types/uuid": "^3.4.7",
     "@types/webpack": "^4.41.6",
     "@types/webpack-dev-server": "^3.10.0",
     "@types/webpack-env": "^1.15.1",
