--- a/package.json
+++ b/package.json
@@ -29,7 +29,12 @@
     "qs": "^6.9.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "router5": "^7.0.2",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-first-router": "^2.1.5",
+    "redux-first-router-link": "^2.1.1",
+    "redux-saga": "^1.1.3",
+    "typesafe-actions": "^5.1.0",
     "uuid": "^7.0.0",
     "whatwg-fetch": "^3.0.0"
   },
@@ -51,6 +56,10 @@
     "@types/qs": "^6.9.1",
     "@types/react": "^16.9.22",
     "@types/react-dom": "^16.9.5",
+    "@types/react-redux": "^7.1.7",
+    "@types/redux-first-router": "^2.1.5",
+    "@types/redux-first-router-link": "^1.4.4",
+    "@types/redux-logger": "^3.0.7",
     "@types/terser-webpack-plugin": "^2.2.0",
     "@types/uuid": "^3.4.7",
     "@types/webpack": "^4.41.6",
@@ -75,6 +84,8 @@
     "postcss-flexbugs-fixes": "^4.2.0",
     "postcss-loader": "^3.0.0",
     "react-hot-loader": "^4.12.19",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
     "regenerator-runtime": "^0.13.3",
     "style-loader": "^1.1.3",
     "terser-webpack-plugin": "^2.3.5",
