--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "jest": "^25.1.0",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
+    "less-vars-to-js": "^1.3.0",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-flexbugs-fixes": "^4.2.0",
